# rinha_2025

./: .env.example  Cargo.toml  Dockerfile  README.md  compose.yml  docker-compose.yml  haproxy.cfg  nginx.conf
.github/workflows/: publish-ghcr.yml
src/: data.rs  db.rs  lb.rs  main.rs  payment.rs  summary.rs
src/api/: mod.rs  payment.rs  summary.rs  util.rs
src/worker/: mod.rs  payment.rs  pp_client.rs  processor.rs  rpc.rs  summary.rs
