[package]
name = "rinha"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"

clap = { version = "4.5.41", features = ["derive"] }

flume = { version = "0.11.1", features = ["async"] }

axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["query"] }

reqwest = { version = "0.12.22", default-features = false, features = ["json"] }

chrono = { version = "0.4.41", features = ["serde"] }

r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }

serde = { version = "1.0.219", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }

tokio = { version = "1.47.0", features = ["rt-multi-thread", "io-util"] }

tower-http = { version = "0.6.6", features = ["trace"] }

once_cell = "1.21.3"

dotenvy = "0.15.7"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
