[package]
name = "rinha"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.98"

mimalloc = "0.1.47"

clap = { version = "4.5.41", features = ["derive"] }

flume = { version = "0.11.1", features = ["async"] }

reqwest = { version = "0.12.22", default-features = false, features = ["json"] }

chrono = { version = "0.4.41", features = ["serde"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
bincode = { version = "2.0.1", features = ["serde"] }

tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread", "io-util"] }
tokio-uring = "0.5.0"

once_cell = "1.21.3"

dotenvy = "0.15.7"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

metrics = "0.24.2"
metrics-util = "0.19.1"
metrics_printer = "0.2.0"
